# SuperElastix

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTest.cmake  CTestConfig.cmake  Jenkinsfile  NOTICE  README.md  SuperElastixConfig.cmake.in  SuperElastixConfigVersion.cmake.in  SuperElastix_job.sh  UseSuperElastix.cmake.in  appveyor.yml  requirements.txt  run_my_first_job.sh
Applications/: CMakeLists.txt
Applications/CommandLineInterface/: ApplicationCommandLineInterface.cmake  CMakeLists.txt
Applications/CommandLineInterface/include/: selxConfigurationReader.h
Applications/CommandLineInterface/src/: selxConfigurationReader.cxx  selxSuperElastix.cxx
Applications/CommandLineInterface/test/: integration.cmake  selxConfigurationReaderTest.cxx
Applications/CommandlineProgram/: CMakeLists.txt
Applications/CommandlineProgram/src/: selxSuperElastix.cxx
Applications/SuperElastixCommandLineInterface/: ApplicationSuperElastixCLI.cmake  CMakeLists.txt
SuperBuild/: CMakeLists.txt  CTest.cmake  CTestConfig.cmake  Elastix.cmake  ExternalATen.cmake  ExternalApplications.cmake  ExternalBoost.cmake  ExternalElastix.cmake  ExternalGoogleBenchmark.cmake  ExternalGoogleTest.cmake  ExternalITK.cmake  ExternalNiftyreg.cmake  SuperElastix.cmake  SuperElastixSuperBuildConfig.cmake.in  SuperElastixSuperBuildConfigVersion.cmake.in  UseSuperElastixSuperBuild.cmake.in
SuperBuild/Patches/: Niftyreg_remove_pngtest.patch  Niftyreg_remove_pngtest_ReadMe.txt  itk_nifti_mangle.patch  itk_nifti_mangle_ReadMe.txt  itk_png_mangle_get_uint_31.patch  itk_png_mangle_get_uint_31.txt  nifty_strtof.patch  niftyreg_cpu_maths.patch  niftyreg_cpu_maths_ReadMe.txt  niftyreg_eigen_assignment.patch  niftyreg_eigen_assignment_ReadMe.txt  niftyreg_strtof_ReadMe.txt
Testing/: CMakeLists.txt  elxExampleTest.cxx  googletest.cmake.in  selxDataDirectories.h.in  selxDataManager.cxx  selxDataManager.h
Testing/Benchmark/: BSplineRegistration.cxx  CMakeLists.txt
Testing/Dashboard/: CMakeLists.txt  docker-compose.yml.in  elxDashboard.yml.in  elxLogstash.conf.in  elxLogstash.crt  elxLogstash.key  elxLogstashForwarder.conf.in  elxLogstashForwarder.crt  elxLogstashForwarder.yml.in  selxDashboard.yml.in  selxLogstash.conf.in  selxLogstashForwarder.json.in  selxLogstashForwarder.yml.in
Testing/Data/Baseline/: elastix_BS_MSD_Displacement.mhd.md5  elastix_BS_MSD_Displacement.mhd.sha512  elastix_BS_MSD_Displacement.raw.md5  elastix_BS_MSD_Displacement.raw.sha512  elastix_BS_MSD_Image.mhd.sha512  elastix_BS_MSD_Image.raw.512  elastix_BS_NCC_Displacement.mhd.sha512  elastix_BS_NCC_Displacement.raw.md5  elastix_BS_NCC_Displacement.raw.sha512  elastix_BS_NCC_Image.mhd.md5  elastix_BS_NCC_Image.mhd.sha512  elastix_BS_NCC_Image.raw.md5  elastix_BS_NCC_Image.raw.sha512  itkv4_SVF_ANTSCC_Displacement.mhd.sha512  itkv4_SVF_ANTSCC_Displacement.raw.sha512  itkv4_SVF_ANTSCC_Image.mhd.md5  itkv4_SVF_ANTSCC_Image.mhd.sha512  itkv4_SVF_ANTSCC_Image.raw.sha512  itkv4_SVF_MSD_Displacement.mhd.sha512  itkv4_SVF_MSD_Displacement.raw.md5  itkv4_SVF_MSD_Displacement.raw.sha512  itkv4_SVF_MSD_Image.mhd.md5  itkv4_SVF_MSD_Image.mhd.sha512  itkv4_SVF_MSD_Image.raw.md5  itkv4_SVF_MSD_Image.raw.sha512
Testing/Data/Configuration/: Aladin.json  IdentityTransformRegistration.json  QueryComponents.json  Read2Connections.json  ReadParallelConnections.json  elastix.json  elastix3d.json  elastix_Base.json  elastix_Blueprint_Bspline_MSD.json  elastix_Bspline_MSD.json  elastix_Bspline_NC.json  elastix_Composed_with_Bspline_MSD.json  groupwiseT1mapping.json  itk_TransformSink.json  itk_warper.json  itkv4.json  itkv4_Affine_MSD.json  itkv4_BSpline.json  itkv4_Base.json  itkv4_SVF_ANTsCC.json  itkv4_SVF_ANTsCC.xml  itkv4_SVF_MSD.json  itkv4_SVF_MSD_missingController.json  itkv4_SVF_MSD_missingOptimizer.json  warp_3rd_image.json  warp_by_displacement.json
Testing/Data/Input/: 2dSquare.vtk.sha512  4D.nii.gz.sha512  BrainProtonDensitySlice.png.sha512  BrainProtonDensitySliceBorder20.png.sha512  BrainProtonDensitySliceBorder20Mask.png.sha512  BrainProtonDensitySliceR10X13Y17.png.sha512  BrainProtonDensitySliceR10X13Y17S12.png.sha512  BrainProtonDensitySliceShifted13x17y.png.sha512  ItkAffine2Dtransform.tfm.md5  ItkAffine2Dtransform.tfm.sha512  ItkAffine3Dtransform.tfm.md5  ItkAffine3Dtransform.tfm.sha512  Lung2dFixedImage.nii.gz.sha512  Lung2dFixedMask.nii.gz.sha512  Lung2dMovingImage.nii.gz.sha512  Lung2dMovingMask.nii.gz.sha512  OAS1_0001_MR1_mpr-1_anon.nrrd.sha512  OAS1_0002_MR1_mpr-1_anon.nrrd.sha512  coneA2d64.mhd.sha512  coneA2d64.raw.sha512  coneA2d64_label.mhd.md5  coneA2d64_label.mhd.sha512  coneA2d64_label.zraw.sha512  coneA2d64_shift.mhd.md5  coneA2d64_shift.mhd.sha512  coneA2d64_shift.raw.md5  coneA2d64_shift.raw.sha512  coneB2d64.mhd.sha512  coneB2d64.raw.sha512  coneB2d64_label.mhd.md5  coneB2d64_label.mhd.sha512  coneB2d64_label.zraw.md5  coneB2d64_label.zraw.sha512  r16slice.nii.gz.sha512  r16slice_mask.nii.gz.sha512  r64slice.nii.gz.sha512  sphereA3d.mhd.sha512  sphereA3d.zraw.md5  sphereA3d.zraw.sha512  sphereA3dMask.mhd.sha512  (+11 more)
Testing/Integration/: CMakeLists.txt
Testing/Unit/: CMakeLists.txt  HelloWorld.cxx  HelloWorldBlueprint.cxx  HelloWorldGoogleTest.cxx  elxBluePrintTest.cxx  elxBlueprintTest.cxx  elxComponentFactoryTest.cxx  elxComponentInterfaceTest.cxx  elxDataDirectories.h  elxDataDirectories.h.in  elxDataManager.cxx  elxDataManager.h  elxElastixComponentTest.cxx  elxElastixFilterTest.cxx  elxExampleUnitTest.cxx  elxOverlordTest.cxx  elxProcessObjectComponentTest.cxx  elxRegistrationItkv4Test.cxx  elxTestHarness.h  elxTestHarness.h.in  elxTestHarnessPaths.h.in  elxTransformixFilterTest.cxx  elxWBIRDemoTest.cxx  elxitkImageFilterTest.cxx  itkRegistration.cxx  selxBlueprintTest.cxx  selxComponentFactoryTest.cxx  selxDataDirectories.h.in  selxDataManager.cxx  selxDataManager.h  selxElastixComponentTest.cxx  selxElastixFilterTest.cxx  selxExampleUnitTest.cxx  selxOverlordTest.cxx  selxRegistrationItkv4Test.cxx  selxTransformixFilterTest.cxx  selxWBIRDemoTest.cxx  selxitkImageFilterTest.cxx
(+798 files in other folders)
